--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
+    "add-asset-html-webpack-plugin": "^3.1.3",
     "autoprefixer": "^7.1.2",
     "axios-mock-adapter": "^1.17.0",
     "babel-core": "^6.22.1",
@@ -92,6 +93,7 @@
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
+    "webpack-cli": "^3.3.8",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0"
